--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ h1{
 	color: black;
 	max-width: 3.3em;
 }
+a{
+	text-decoration: none;
+	color: inherit;
+}
 h1::selection{
 	color: white;
 	background: black;
